# sheetlang

./: Cargo.toml  README.md  build.rs
.github/workflows/: cloudflare-pages-deploy.yml
examples/: counter.txt
infra/: .gitignore  main.tofu
src/: ast.rs  collaborative.rs  command.rs  command_parse.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  tests.rs  wasm.rs
tests/: integration.rs
tests/scripts/: 01_arithmetic.sheet  01_tensor_arithmetic.sheet  02_logic.sheet  02_logic_truthiness.sheet  03_arrays.sheet  03_arrays_indexing.sheet  04_dicts.sheet  04_dicts_members.sheet  05_currying_closures.sheet  05_lambdas.sheet  06_relative_refs.sheet  06_views_relative_refs.sheet  07_temporal_propagation.sheet  07_tick_propogation.sheet  08_range_assignments_ambiguity.sheet  08_slice_assignments.sheet  09_effects_and_loops.sheet  09_game_of_life.sheet  10_multi_tensor_views.sheet  10_virus.sheet  11_multi_tensor_views.sheet  12_assign_all.sheet  13_game_of_life.sheet  14_advanced_slices.sheet
tests/snapshots/: integration__script_snapshots@01_tensor_arithmetic.sheet.snap  integration__script_snapshots@01_tensor_arithmetic.sheet.snap.new  integration__script_snapshots@02_logic_truthiness.sheet.snap  integration__script_snapshots@02_logic_truthiness.sheet.snap.new  integration__script_snapshots@03_arrays_indexing.sheet.snap  integration__script_snapshots@03_arrays_indexing.sheet.snap.new  integration__script_snapshots@04_dicts_members.sheet.snap  integration__snapshots@02_logic.sheet.snap  (+33 more)
web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
(+8 files in other folders)
