[package]
name = "sheetlang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
chumsky = "0.12.0"
logos = "0.14.0"
rustyline = "14.0.0"

[dev-dependencies]
insta = { version = "1.44", features = ["yaml", "glob"] }

[lib]
name = "sheetlang"
path = "src/lib.rs"

[[bin]]
name = "sheetlang"
path = "src/bin/sheetlang.rs"