[package]
name = "sheetlang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.6.0"
chumsky = "0.12.0"
logos = "0.16.1"
loro = "1.10.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "17.0.2"

[dev-dependencies]
insta = { version = "1.44", features = ["yaml", "glob"] }

[lib]
name = "sheetlang"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sheetlang"
path = "src/bin/sheetlang.rs"
